# nitinol-sqlite-adaptor

./: .gitignore  Cargo.toml  README.md  deny.toml
migrations/: 20250225190903_init.sql
src/: store.rs
tests/: program.rs
