[package]
name = "nitinol-sqlite-adaptor"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "^0.1"
dotenvy = "^0.15"
sqlx = { version = "^0.8", features = ["sqlite", "migrate", "time"] }

[dependencies.nitinol]
git = "https://github.com/HalsekiRaika/nitinol"
tag = "v0.3.0-beta.1"
features = ["protocol-sqlx"]
