[package]
name = "nitinol-sqlite-adaptor"
description = "SQLite storage adapter for `nitinol-persistence`."
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "^0.1"
dotenvy = "^0.15"
sqlx = { version = "^0.8", features = ["runtime-tokio", "sqlite", "migrate", "time"] }

tracing = "^0.1"

nitinol-core = "=1.0.0"
nitinol-protocol = { version = "=0.1.0", features = ["sqlx"] }

[dev-dependencies]
nitinol = { version = "0.4.1", features = ["process", "persistence", "macro"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

anyhow = "^1"

tokio = { version = "^1", features = ["time", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
